Fixed min module width so complex buttons don't wrap.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,8 +8,8 @@ body {
 	background-color: black;
 }
 
-.module {
-	min-width: 350px;
+.card {
+	min-width: 380px;
 }
 
 input[type="text"],
